--- a/Contact.html.html
+++ b/Contact.html.html
@@ -1,113 +1,104 @@
 <!DOCTYPE html>
 <html class="dark" lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Contact Us - Excelsiora</title>
-  <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@400;500;600;700&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-  <style>
-    .material-symbols-outlined {
-      font-variation-settings:
-      'FILL' 0,
-      'wght' 400,
-      'GRAD' 0,
-      'opsz' 24
-    }
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-  <script id="tailwind-config">
-    tailwind.config = {
-      darkMode: "class",
-      theme: {
-        extend: {
-          colors: {
-            "primary": "#3c10a2",
-            "background-light": "#f6f6f8",
-            "background-dark": "#161121",
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Us - Excelsiora</title>
+
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+
+    <script id="tailwind-config">
+      tailwind.config = {
+        darkMode: "class",
+        theme: {
+          extend: {
+            colors: {
+              primary: "#3c10a2",
+              "background-light": "#f6f6f8",
+              "background-dark": "#161121",
+            },
+            fontFamily: { display: ["Spline Sans", "sans-serif"] },
           },
-          fontFamily: {
-            "display": ["Spline Sans", "sans-serif"]
-          },
-          borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
         },
-      },
-    }
-  </script>
-</head>
+      };
+    </script>
+  </head>
 
-<body class="bg-background-light dark:bg-background-dark font-display">
-  <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
-
-    <!-- Header -->
-    <header class="flex items-center p-4">
-      <div class="text-white flex size-12 shrink-0 items-center justify-start">
-        <span class="material-symbols-outlined text-white/90">arrow_back</span>
-      </div>
-      <h2 class="text-white/90 text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Get in Touch</h2>
+  <body class="bg-background-light dark:bg-background-dark font-display text-gray-900 dark:text-gray-100">
+    <!-- ===== Navigation Bar ===== -->
+    <header class="w-full fixed top-0 z-50 bg-background-dark/80 backdrop-blur-lg border-b border-primary/10">
+      <nav class="container mx-auto flex justify-between items-center py-4 px-6">
+        <a href="index.html" class="text-white text-2xl font-extrabold">Excelsiora</a>
+        <ul class="hidden md:flex space-x-8 text-white font-semibold">
+          <li><a href="index.html" class="hover:text-primary">Home</a></li>
+          <li><a href="about.html" class="hover:text-primary">About</a></li>
+          <li><a href="offering.html" class="hover:text-primary">Offerings</a></li>
+          <li><a href="portfolio.html" class="hover:text-primary">Portfolio</a></li>
+          <li><a href="testimonial.html" class="hover:text-primary">Testimonials</a></li>
+          <li><a href="contact.html" class="text-primary font-bold">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <!-- Main Content -->
-    <main class="flex-1 px-4 py-2 flex flex-col">
-      <h1 class="text-white tracking-tight text-[32px] font-bold leading-tight text-left pb-4 pt-4">
-        Let's Create Something Amazing Together
-      </h1>
+    <!-- ===== Contact Section ===== -->
+    <main class="flex flex-col items-center justify-center min-h-screen px-6 py-24 mt-10">
+      <h1 class="text-4xl font-extrabold text-center mb-4">Contact Us</h1>
+      <p class="text-slate-400 text-center max-w-xl mb-10">
+        Have a project in mind? Fill out the form below, and our team will get in touch with you soon.
+      </p>
 
-      <!-- ✅ Netlify Form -->
-      <form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" action="/thankyou.html" class="flex flex-col gap-3 flex-1">
-        <!-- Hidden form name -->
+      <form
+        name="contact"
+        method="POST"
+        data-netlify="true"
+        action="thankyou.html"
+        class="bg-white dark:bg-background-dark/60 p-8 rounded-xl shadow-lg max-w-lg w-full space-y-4"
+      >
         <input type="hidden" name="form-name" value="contact" />
 
-        <!-- Spam protection field (hidden) -->
-        <p hidden>
-          <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
-        </p>
-
-        <div class="flex flex-col">
-          <label class="text-white text-base font-medium leading-normal pb-2" for="full-name">Full Name</label>
-          <input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-white focus:outline-0 focus:ring-2 focus:ring-primary/50 border border-[#423366] bg-[#211a33] focus:border-primary h-14 placeholder:text-[#a392c8] p-[15px] text-base font-normal leading-normal" id="full-name" placeholder="Enter your full name" type="text" name="name" required />
+        <div>
+          <label class="block font-semibold mb-2">Full Name</label>
+          <input
+            type="text"
+            name="name"
+            required
+            class="w-full px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-700 bg-transparent focus:ring-2 focus:ring-primary focus:outline-none"
+          />
         </div>
 
-        <div class="flex flex-col">
-          <label class="text-white text-base font-medium leading-normal pb-2" for="email">Email Address</label>
-          <input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-white focus:outline-0 focus:ring-2 focus:ring-primary/50 border border-[#423366] bg-[#211a33] focus:border-primary h-14 placeholder:text-[#a392c8] p-[15px] text-base font-normal leading-normal" id="email" placeholder="you@example.com" type="email" name="email" required />
+        <div>
+          <label class="block font-semibold mb-2">Email Address</label>
+          <input
+            type="email"
+            name="email"
+            required
+            class="w-full px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-700 bg-transparent focus:ring-2 focus:ring-primary focus:outline-none"
+          />
         </div>
 
-        <div class="flex flex-col">
-          <label class="text-white text-base font-medium leading-normal pb-2" for="message">Your Message</label>
-          <textarea class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-white focus:outline-0 focus:ring-2 focus:ring-primary/50 border border-[#423366] bg-[#211a33] focus:border-primary min-h-36 placeholder:text-[#a392c8] p-[15px] text-base font-normal leading-normal" id="message" placeholder="Tell us about your project..." name="message" required></textarea>
+        <div>
+          <label class="block font-semibold mb-2">Message</label>
+          <textarea
+            name="message"
+            rows="5"
+            required
+            class="w-full px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-700 bg-transparent focus:ring-2 focus:ring-primary focus:outline-none"
+          ></textarea>
         </div>
 
-        <div class="pt-4">
-          <button class="flex w-full items-center justify-center rounded-xl bg-primary px-6 py-4 text-base font-bold text-white transition-all hover:bg-primary/90" type="submit">Send Message</button>
-        </div>
+        <button
+          type="submit"
+          class="w-full py-3 rounded-lg bg-primary text-white font-bold hover:scale-105 transition-transform"
+        >
+          Send Message
+        </button>
       </form>
-
-      <!-- Social links -->
-      <div class="py-8 text-center">
-        <p class="text-[#a392c8] text-sm font-medium">Follow Our Journey</p>
-        <div class="mt-4 flex items-center justify-center gap-6">
-          <a class="flex items-center gap-2 text-white/90 hover:text-white transition-colors" href="#">
-            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24"><path d="M12 16a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z" stroke="currentColor" stroke-width="1.5"></path><path d="M3 12c0-2.828 0-4.243.879-5.121C4.757 6 6.172 6 9 6h6c2.828 0 4.243 0 5.121.879C21 7.757 21 9.172 21 12v6c0 2.828 0 4.243-.879 5.121C19.243 24 17.828 24 15 24H9c-2.828 0-4.243 0-5.121-.879C3 22.243 3 20.828 3 18v-6Z" stroke="currentColor" stroke-width="1.5"></path><path d="M16.5 7.5v.001" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path></svg>
-            <span>@Excelsiora1000</span>
-          </a>
-        </div>
-        <div class="mt-4 flex items-center justify-center gap-6">
-          <a class="flex items-center gap-2 text-white/90 hover:text-white transition-colors" href="#">
-            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.38 1.25 4.82l-1.34 4.89 5.02-1.32c1.39.72 2.94 1.15 4.59 1.15h.01c5.46 0 9.91-4.45 9.91-9.91s-4.45-9.91-9.91-9.91z"></path></svg>
-            <span>+234 805 471 9869</span>
-          </a>
-        </div>
-      </div>
     </main>
-
-    <!-- Floating Action Button -->
-    <a class="fixed bottom-6 right-6 flex h-16 w-16 items-center justify-center rounded-full bg-[#25D366] text-white shadow-lg transition-transform hover:scale-105" href="#">
-      <svg class="h-8 w-8" fill="currentColor" viewBox="0 0 24 24"><path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.38 1.25 4.82l-1.34 4.89 5.02-1.32c1.39.72 2.94 1.15 4.59 1.15h.01c5.46 0 9.91-4.45 9.91-9.91s-4.45-9.91-9.91-9.91z"></path></svg>
-    </a>
-  </div>
-</body>
+  </body>
 </html>
