--- a/Index.html.html
+++ b/Index.html.html
@@ -78,9 +78,9 @@
         >
           <a href="index.html" class="hover:text-primary block">Home</a>
           <a href="about.html" class="hover:text-primary block">About</a>
-          <a href="offering.html" class="hover:text-primary block">Offerings</a>
+          <a href="offerings.html" class="hover:text-primary block">Offerings</a>
           <a href="portfolio.html" class="hover:text-primary block">Portfolio</a>
-          <a href="testimonial.html" class="hover:text-primary block">Testimonials</a>
+          <a href="testimonials.html" class="hover:text-primary block">Testimonials</a>
           <a href="contact.html" class="hover:text-primary block">Contact</a>
         </div>
       </header>
@@ -110,7 +110,7 @@
             >Start Your Project</a
           >
           <a
-            href="portfolio.html"
+            href="portfolio.html.html"
             class="px-6 h-12 flex items-center justify-center border-2 border-primary text-white font-bold rounded-lg hover:bg-primary/30 transition-colors"
             >View Portfolio</a
           >
@@ -127,4 +127,5 @@
       });
     </script>
   </body>
+
 </html>
