Update and rename Index.html.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -56,26 +56,18 @@
           <ul class="hidden md:flex space-x-8 text-white font-semibold">
             <li><a href="index.html" class="hover:text-primary transition-colors">Home</a></li>
             <li><a href="about.html" class="hover:text-primary transition-colors">About</a></li>
-            <li><a href="offering.html" class="hover:text-primary transition-colors">Offerings</a></li>
+            <li><a href="offerings.html" class="hover:text-primary transition-colors">Offerings</a></li>
             <li><a href="portfolio.html" class="hover:text-primary transition-colors">Portfolio</a></li>
-            <li><a href="testimonial.html" class="hover:text-primary transition-colors">Testimonials</a></li>
+            <li><a href="testimonials.html" class="hover:text-primary transition-colors">Testimonials</a></li>
             <li><a href="contact.html" class="hover:text-primary transition-colors">Contact</a></li>
           </ul>
 
           <!-- Mobile Menu Button -->
-          <button
-            id="menu-btn"
-            class="block md:hidden text-white focus:outline-none"
-          >
-            ☰
-          </button>
+          <button id="menu-btn" class="block md:hidden text-white focus:outline-none">☰</button>
         </nav>
 
         <!-- Mobile Menu -->
-        <div
-          id="mobile-menu"
-          class="hidden flex-col bg-background-dark md:hidden text-white px-6 pb-4 space-y-2"
-        >
+        <div id="mobile-menu" class="hidden flex-col bg-background-dark md:hidden text-white px-6 pb-4 space-y-2">
           <a href="index.html" class="hover:text-primary block">Home</a>
           <a href="about.html" class="hover:text-primary block">About</a>
           <a href="offerings.html" class="hover:text-primary block">Offerings</a>
@@ -91,9 +83,7 @@
         style='background-image: linear-gradient(rgba(10, 4, 60, 0.7), rgba(22, 17, 33, 0.9)), url("https://lh3.googleusercontent.com/aida-public/AB6AXuBgHEs-ZK0sAd72_Qlv3tiTbhtzvBDwz_ytN8cJCXV2N-vEvqTbaHX5BpYCSPEBxjwxV_z70P3iMRLSpNHoMwiG6PXZMY567kbquPDvn2XO5GMJ3RyQDrotxnvwqoQUoXvra1EXoRy2SWMena3unkQ75weWENxicT_2YY4NWeduZtvg0wIJkLbgCOXrnvfLT6pZ3ZH3A3GEo2EybP2StvfFVAhb1KbwyrZaL4WEbZVgBGiAqkn_uf1B_aXYPkaNWiKgO9R4cHqMEMQ");'
       >
         <div class="max-w-2xl mt-20 md:mt-32">
-          <h1
-            class="text-4xl md:text-6xl font-black text-white leading-tight tracking-tight"
-          >
+          <h1 class="text-4xl md:text-6xl font-black text-white leading-tight tracking-tight">
             Building Digital Experiences That Inspire
           </h1>
           <p class="text-slate-300 mt-4 text-lg leading-relaxed">
@@ -110,7 +100,7 @@
             >Start Your Project</a
           >
           <a
-            href="portfolio.html.html"
+            href="portfolio.html"
             class="px-6 h-12 flex items-center justify-center border-2 border-primary text-white font-bold rounded-lg hover:bg-primary/30 transition-colors"
             >View Portfolio</a
           >
@@ -127,5 +117,4 @@
       });
     </script>
   </body>
-
 </html>
