--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,39 @@
       }
     </style>
   </head>
+  <header class="w-full fixed top-0 z-50 bg-background-dark/80 backdrop-blur-lg border-b border-primary/10">
+  <nav class="container mx-auto flex justify-between items-center py-4 px-6">
+    <!-- Logo -->
+    <a href="index.html" class="text-white text-2xl font-extrabold tracking-tight">
+      Excelsiora
+    </a>
+
+    <!-- Nav Links -->
+    <ul class="hidden md:flex space-x-8 text-white font-semibold">
+      <li><a href="index.html" class="hover:text-primary transition-colors">Home</a></li>
+      <li><a href="about.html" class="hover:text-primary transition-colors">About</a></li>
+      <li><a href="offerings.html" class="hover:text-primary transition-colors">Offerings</a></li>
+      <li><a href="portfolio.html" class="hover:text-primary transition-colors">Portfolio</a></li>
+      <li><a href="testimonials.html" class="hover:text-primary transition-colors">Testimonials</a></li>
+      <li><a href="contact.html" class="hover:text-primary transition-colors">Contact</a></li>
+    </ul>
+
+    <!-- Mobile Menu Button -->
+    <button id="menu-btn" class="block md:hidden text-white focus:outline-none">☰</button>
+  </nav>
+
+  <!-- Mobile Menu -->
+  <div id="mobile-menu" class="hidden flex-col bg-background-dark md:hidden text-white px-6 pb-4 space-y-2">
+    <a href="index.html" class="hover:text-primary block">Home</a>
+    <a href="about.html" class="hover:text-primary block">About</a>
+    <a href="offerings.html" class="hover:text-primary block">Offerings</a>
+    <a href="portfolio.html" class="hover:text-primary block">Portfolio</a>
+    <a href="testimonials.html" class="hover:text-primary block">Testimonials</a>
+    <a href="contact.html" class="hover:text-primary block">Contact</a>
+  </div>
+</header>
+
+
 
   <body class="bg-background-light dark:bg-background-dark font-display">
     <div class="relative flex flex-col min-h-screen w-full overflow-x-hidden">
@@ -56,23 +89,31 @@
           <ul class="hidden md:flex space-x-8 text-white font-semibold">
             <li><a href="index.html" class="hover:text-primary transition-colors">Home</a></li>
             <li><a href="about.html" class="hover:text-primary transition-colors">About</a></li>
-            <li><a href="offerings.html" class="hover:text-primary transition-colors">Offerings</a></li>
+            <li><a href="offering.html" class="hover:text-primary transition-colors">Offerings</a></li>
             <li><a href="portfolio.html" class="hover:text-primary transition-colors">Portfolio</a></li>
-            <li><a href="testimonials.html" class="hover:text-primary transition-colors">Testimonials</a></li>
+            <li><a href="testimonial.html" class="hover:text-primary transition-colors">Testimonials</a></li>
             <li><a href="contact.html" class="hover:text-primary transition-colors">Contact</a></li>
           </ul>
 
           <!-- Mobile Menu Button -->
-          <button id="menu-btn" class="block md:hidden text-white focus:outline-none">☰</button>
+          <button
+            id="menu-btn"
+            class="block md:hidden text-white focus:outline-none"
+          >
+            ☰
+          </button>
         </nav>
 
         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden flex-col bg-background-dark md:hidden text-white px-6 pb-4 space-y-2">
+        <div
+          id="mobile-menu"
+          class="hidden flex-col bg-background-dark md:hidden text-white px-6 pb-4 space-y-2"
+        >
           <a href="index.html" class="hover:text-primary block">Home</a>
           <a href="about.html" class="hover:text-primary block">About</a>
-          <a href="offerings.html" class="hover:text-primary block">Offerings</a>
+          <a href="offering.html" class="hover:text-primary block">Offerings</a>
           <a href="portfolio.html" class="hover:text-primary block">Portfolio</a>
-          <a href="testimonials.html" class="hover:text-primary block">Testimonials</a>
+          <a href="testimonial.html" class="hover:text-primary block">Testimonials</a>
           <a href="contact.html" class="hover:text-primary block">Contact</a>
         </div>
       </header>
@@ -83,7 +124,9 @@
         style='background-image: linear-gradient(rgba(10, 4, 60, 0.7), rgba(22, 17, 33, 0.9)), url("https://lh3.googleusercontent.com/aida-public/AB6AXuBgHEs-ZK0sAd72_Qlv3tiTbhtzvBDwz_ytN8cJCXV2N-vEvqTbaHX5BpYCSPEBxjwxV_z70P3iMRLSpNHoMwiG6PXZMY567kbquPDvn2XO5GMJ3RyQDrotxnvwqoQUoXvra1EXoRy2SWMena3unkQ75weWENxicT_2YY4NWeduZtvg0wIJkLbgCOXrnvfLT6pZ3ZH3A3GEo2EybP2StvfFVAhb1KbwyrZaL4WEbZVgBGiAqkn_uf1B_aXYPkaNWiKgO9R4cHqMEMQ");'
       >
         <div class="max-w-2xl mt-20 md:mt-32">
-          <h1 class="text-4xl md:text-6xl font-black text-white leading-tight tracking-tight">
+          <h1
+            class="text-4xl md:text-6xl font-black text-white leading-tight tracking-tight"
+          >
             Building Digital Experiences That Inspire
           </h1>
           <p class="text-slate-300 mt-4 text-lg leading-relaxed">
@@ -110,11 +153,12 @@
 
     <!-- ===== Mobile Menu Script ===== -->
     <script>
-      const menuBtn = document.getElementById("menu-btn");
-      const mobileMenu = document.getElementById("mobile-menu");
-      menuBtn.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
-      });
-    </script>
+  const menuBtn = document.getElementById("menu-btn");
+  const mobileMenu = document.getElementById("mobile-menu");
+  menuBtn.addEventListener("click", () => {
+    mobileMenu.classList.toggle("hidden");
+  });
+</script>
+
   </body>
 </html>
