--- a/Contact.html
+++ b/Contact.html
@@ -125,6 +125,29 @@
     mobileMenu.classList.toggle("hidden");
   });
 </script>
+<footer class="bg-primary text-white py-8 mt-12">
+  <div class="max-w-6xl mx-auto px-6 text-center">
+    <h3 class="text-2xl font-bold mb-2">Excelsiora</h3>
+    <p class="text-slate-200 mb-4">
+      Empowering brands through design, technology, and creativity.
+    </p>
+    <div class="flex justify-center gap-6 mb-4">
+      <a href="index.html" class="hover:underline">Home</a>
+      <a href="about.html" class="hover:underline">About</a>
+      <a href="portfolio.html" class="hover:underline">Portfolio</a>
+      <a href="offering.html" class="hover:underline">Offerings</a>
+      <a href="testimonial.html" class="hover:underline">Testimonials</a>
+      <a href="contact.html" class="hover:underline">Contact</a>
+    </div>
+    <p class="text-sm text-slate-400">
+      © <span id="year"></span> Excelsiora. All rights reserved.
+    </p>
+  </div>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
 
   </body>
 </html>
