--- a/Testimonials.html
+++ b/Testimonials.html
@@ -159,11 +159,11 @@
 </div>
 </div>
 <!-- CTA Button -->
-<div class="flex justify-center py-12">
-<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-8 bg-primary text-white text-base font-bold leading-normal tracking-wide transition-transform duration-200 hover:scale-105">
-<span class="truncate">Become Our Next Success Story</span>
-</button>
-</div>
+<a href="portfolio.html" class="flex px-0 pt-8 pb-3">
+  <span class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 flex-1 bg-primary text-white text-base font-bold leading-normal tracking-[0.015em]">
+    View Portfolio
+  </span>
+</a>
 </div>
 <script>
   const menuBtn = document.getElementById("menu-btn");
@@ -172,4 +172,28 @@
     mobileMenu.classList.toggle("hidden");
   });
 </script>
+    <footer class="bg-primary text-white py-8 mt-12">
+  <div class="max-w-6xl mx-auto px-6 text-center">
+    <h3 class="text-2xl font-bold mb-2">Excelsiora</h3>
+    <p class="text-slate-200 mb-4">
+      Empowering brands through design, technology, and creativity.
+    </p>
+    <div class="flex justify-center gap-6 mb-4">
+      <a href="index.html" class="hover:underline">Home</a>
+      <a href="about.html" class="hover:underline">About</a>
+      <a href="portfolio.html" class="hover:underline">Portfolio</a>
+      <a href="offering.html" class="hover:underline">Offerings</a>
+      <a href="testimonial.html" class="hover:underline">Testimonials</a>
+      <a href="contact.html" class="hover:underline">Contact</a>
+    </div>
+    <p class="text-sm text-slate-400">
+      © <span id="year"></span> Excelsiora. All rights reserved.
+    </p>
+  </div>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+
 </body></html>
