--- a/Testimonials.html
+++ b/Testimonials.html
@@ -159,9 +159,9 @@
 </div>
 </div>
 <!-- CTA Button -->
-<a href="portfolio.html" class="flex px-0 pt-8 pb-3">
+<a href="contact.html" class="flex px-0 pt-8 pb-3">
   <span class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 flex-1 bg-primary text-white text-base font-bold leading-normal tracking-[0.015em]">
-    View Portfolio
+    Become Our Next Success Story
   </span>
 </a>
 </div>
@@ -172,7 +172,11 @@
     mobileMenu.classList.toggle("hidden");
   });
 </script>
-    <footer class="bg-primary text-white py-8 mt-12">
+   
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+ <footer class="bg-primary text-white py-8 mt-12">
   <div class="max-w-6xl mx-auto px-6 text-center">
     <h3 class="text-2xl font-bold mb-2">Excelsiora</h3>
     <p class="text-slate-200 mb-4">
@@ -191,9 +195,5 @@
     </p>
   </div>
 </footer>
-
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-</script>
 
 </body></html>
