--- a/Index.html
+++ b/Index.html
@@ -137,17 +137,20 @@
         </div>
 
         <div class="flex flex-wrap justify-center items-center gap-4 mt-6">
-          <a
-            href="contact.html"
-            class="px-6 h-12 flex items-center justify-center bg-primary text-white font-bold rounded-lg hover:scale-105 transition-transform"
-            >Start Your Project</a
-          >
-          <a
-            href="portfolio.html"
-            class="px-6 h-12 flex items-center justify-center border-2 border-primary text-white font-bold rounded-lg hover:bg-primary/30 transition-colors"
-            >View Portfolio</a
-          >
-        </div>
+  <a
+    href="contact.html"
+    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 flex-1 bg-primary text-white text-base font-bold leading-normal tracking-[0.015em] hover:scale-105 transition-transform"
+  >
+    Start Your Project
+  </a>
+  <a
+    href="portfolio.html"
+    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 flex-1 bg-transparent border-2 border-primary text-white text-base font-bold leading-normal tracking-[0.015em] hover:bg-primary/30 transition-colors"
+  >
+    View Portfolio
+  </a>
+</div>
+
       </main>
     </div>
 
@@ -159,6 +162,25 @@
     mobileMenu.classList.toggle("hidden");
   });
 </script>
-
+<footer class="bg-primary text-white py-8 mt-12">
+  <div class="max-w-6xl mx-auto px-6 text-center">
+    <h3 class="text-2xl font-bold mb-2">Excelsiora</h3>
+    <p class="text-slate-200 mb-4">
+      Empowering brands through design, technology, and creativity.
+    </p>
+    <div class="flex justify-center gap-6 mb-4">
+      <a href="index.html" class="hover:underline">Home</a>
+      <a href="about.html" class="hover:underline">About</a>
+      <a href="portfolio.html" class="hover:underline">Portfolio</a>
+      <a href="offering.html" class="hover:underline">Offerings</a>
+      <a href="testimonial.html" class="hover:underline">Testimonials</a>
+      <a href="contact.html" class="hover:underline">Contact</a>
+    </div>
+    <p class="text-sm text-slate-400">
+      © <span id="year"></span> Excelsiora. All rights reserved.
+    </p>
+  </div>
+</footer>
   </body>
 </html>
+
