--- a/Offerings.html
+++ b/Offerings.html
@@ -87,13 +87,20 @@
                 From stunning websites to captivating animations, our creative agency brings your vision to life.
             </p>
 <div class="flex flex-wrap items-center justify-center gap-4">
-<button class="flex h-12 min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full bg-primary px-6 text-base font-bold text-white transition-transform duration-200 hover:scale-105">
-<span class="truncate">Our Portfolio</span>
-</button>
-<button class="flex h-12 min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full border border-primary/50 bg-transparent px-6 text-base font-bold text-primary transition-colors duration-200 hover:bg-primary/10">
-<span class="truncate">Contact Us</span>
-</button>
+  <a
+    href="portfolio.html"
+    class="flex h-12 min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full bg-primary px-6 text-base font-bold text-white transition-transform duration-200 hover:scale-105"
+  >
+    <span class="truncate">Our Portfolio</span>
+  </a>
+  <a
+    href="contact.html"
+    class="flex h-12 min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full border border-primary/50 bg-transparent px-6 text-base font-bold text-primary transition-colors duration-200 hover:bg-primary/10"
+  >
+    <span class="truncate">Contact Us</span>
+  </a>
 </div>
+
 </div>
 </div>
 <!-- Services Section -->
